Updating leture 132. setup package.json, added dependencies and setup .gitignore for node_modules

--- a/9-forkify/starter/package.json
+++ b/9-forkify/starter/package.json
@@ -14,7 +14,7 @@
   ],
   "author": "Eliad Tuksher",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "webpack": "^4.29.6"
   }
 }
