--- a/9-forkify/starter/package.json
+++ b/9-forkify/starter/package.json
@@ -4,7 +4,8 @@
   "description": "JavaScript course Forkify app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [
     "JavaScript",
@@ -15,6 +16,13 @@
   "author": "Eliad Tuksher",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.29.6"
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "babel-loader": "^8.0.5",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.4.0"
   }
 }
