--- a/9-forkify/starter/package.json
+++ b/9-forkify/starter/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "fractional": "^1.0.0"
   }
 }
